--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^9.23.0",
     "localforage": "^1.10.0",
+    "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^6.14.0",
     "react-tilt": "^1.0.2",
+    "react-type-animation": "^3.1.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
