--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
+    "aos": "^2.3.4",
     "firebase": "^9.23.0",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
