--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-loader-spinner": "^5.3.4",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^6.14.0",
+    "react-spinners": "^0.13.8",
     "react-tilt": "^1.0.2",
     "react-type-animation": "^3.1.0",
     "sort-by": "^1.2.0"
