--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-lottie": "^1.2.3",
     "react-router-dom": "^6.14.0",
     "react-spinners": "^0.13.8",
+    "react-tabs": "^6.0.2",
     "react-tilt": "^1.0.2",
     "react-type-animation": "^3.1.0",
     "sort-by": "^1.2.0"
