--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-spinners": "^0.13.8",
     "react-tabs": "^6.0.2",
     "react-tilt": "^1.0.2",
+    "react-top-loading-bar": "^2.3.1",
     "react-type-animation": "^3.1.0",
     "sort-by": "^1.2.0"
   },
