modify about section

--- a/public/project.json
+++ b/public/project.json
@@ -30,7 +30,7 @@
     },
     {
         "id":4,
-        "img":"https://i.ibb.co/27qVYBT/ToyCar.png",
+        "img":"https://i.ibb.co/6mjXdkL/toys-car-web-app.png",
         "title":"Toy Market (MERN)",
         "sunTitle":"Toy Cars World",
         "liveLink":"https://toys-car.web.app/",
