add new project

--- a/public/project.json
+++ b/public/project.json
@@ -1,18 +1,18 @@
 [
     {
         "id":1,
-        "img":"https://i.ibb.co/10060rc/college-Img.png",
-        "title":"College Booking Facilities (MERN)",
-        "sunTitle":"Collegiate Nexus",
-        "liveLink":"https://collegiate-nexus.web.app/",
-        "client":"https://github.com/IamLikhon1/college-client",
-        "server":"https://github.com/IamLikhon1/college-server",
+        "img":"https://i.ibb.co/0Xhd6xR/doc-house-0-web-app.png",
+        "title":"Doctor Service",
+        "sunTitle":"Doc House",
+        "liveLink":"https://doc-house-0.web.app/",
+        "client":"https://github.com/IamLikhon1/house-doc-client",
+        "server":"https://github.com/IamLikhon1/house-doc-server",
         "category":"FullStack"
     },
     {
         "id":2,
         "img":"https://i.ibb.co/cNPqd9s/language.pngg",
-        "title":"Foreign Language (MERN)",
+        "title":"Foreign Language",
         "sunTitle":"Summer School Camp Website",
         "liveLink":"https://fashion-summer.web.app/",
         "client":"https://github.com/IamLikhon1/language-vacation",
@@ -31,7 +31,7 @@
     {
         "id":4,
         "img":"https://i.ibb.co/6mjXdkL/toys-car-web-app.png",
-        "title":"Toy Market (MERN)",
+        "title":"Toy Market",
         "sunTitle":"Toy Cars World",
         "liveLink":"https://toys-car.web.app/",
         "client":"https://github.com/IamLikhon1/markect-toy",
@@ -102,5 +102,15 @@
         "liveLink":"https://rainbow-pika-b70f89.netlify.app/",
         "client":"http://localhost",
         "category":"Figma"
+    },
+    {
+        "id":12,
+        "img":"https://i.ibb.co/10060rc/college-Img.png",
+        "title":"College Booking Facilities",
+        "sunTitle":"Collegiate Nexus",
+        "liveLink":"https://collegiate-nexus.web.app/",
+        "client":"https://github.com/IamLikhon1/college-client",
+        "server":"https://github.com/IamLikhon1/college-server",
+        "category":"FullStack"
     }
 ]
